--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,7 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "paths": {
-      "shared/*": [
-        "app/shared/*"
-      ]
+      "shared/*": ["app/shared/*"]
     },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
@@ -23,10 +21,7 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "es2020",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
+    "lib": ["es2020", "dom"],
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
